# GEDISABRES

./: .gitignore  Project.toml  README.md  pyproject.toml  requirements.in  requirements.txt  todo.md
.github/workflows/: release.yml
data/: README.md  atomic_masses.csv  cheung_rkr_fc.csv  cosby00.csv  cosby09.csv  harris_rkr_fc.csv  harvard.csv  harvard10.csv  harvard30.csv  harvard50.csv  harvrd.csv  hitran.csv  molecular_masses.csv  nicholls_morse_fc.csv  pgopher.csv  predissociation.csv  test.csv  webplot_021_band.csv  webplot_09_band.csv
data/14N16O/dunham/: X2P_engleman.csv
data/14N16O/einstein/: B2P_to_X2P.csv
data/14N16O/franck-condon/: A2S+_to_X2P.csv  B2P_to_X2P.csv
data/14N16O/per-level/: A2S+.csv
data/16O16O/: README.md
data/16O1H/: README.md
data/16O1H/dunham/: A2S+.csv  X2P.csv
data/16O1H/einstein/: A2S+_to_X2P.csv
data/16O1H/franck-condon/: A2S+_to_X2P.csv
data/NO/: README.md
data/NO/dunham/: A2S+.csv  B2P.csv  X2P.csv
data/NO/einstein/: A2S+_to_X2P_laux.csv
data/NO/franck-condon/: A2S+_to_X2P_laux.csv
data/NO/per-level/: A2S+.csv  B2P.csv  X2P.csv
data/NO/states/: X2P.csv
data/O2/: README.md
data/O2/per-level/: B3Su-.csv  X3Sg-.csv
data/O2/states/: B3Su-.csv  X3Sg-.csv
data/OH/: README.md
data/OH/dunham/: A2S+.csv  X2P.csv
data/OH/franck-condon/: A2S+_to_X2P.csv
data/atomic/: mass_1.mas20
data/constants/O2/: B3Su-.csv  X3Sg-.csv
data/cosby/: cosby00.csv  cosby021.csv
data/franck-condon/: cheung_rkr_fc.csv  harris_rkr_fc.csv  o2.csv
data/harvard/: harvard20.csv  harvard40.csv  harvard60.csv  harvard70.csv  harvard80.csv
data/molecular_constants/: o2+.csv  o2.csv
data/o2+/: chen.csv
data/samples/: hitran.csv  pgopher-no-ax-00.csv  pgopher-no-ax-02-perlevel.csv  pgopher-no-bx-00.csv  pgopher-no-bx-41_51-perlevel.csv  pgopher-o2-bx-20.csv  pgopher-oh-ax-00-dunham.csv  pgopher-oh-ax-00.csv  pgopher.csv
data/samples/harvard/: harvard10.csv  harvard20.csv  harvard30.csv  harvard40.csv  harvard50.csv  harvard60.csv  harvard70.csv  harvard80.csv
docs/: gedisabres.bib  gedisabres.tex  pygeonosis.bib  pygeonosis.tex  references.bib  refs.bib  spectra.tex  todo.md
docs/chapters/: approximations.tex  constants.tex  energy.tex  hamiltonian.tex  hund.tex  intensities.tex  intensity.tex  lif.tex  lineshapes.tex  notation.tex  numbers.tex  oxygen.tex  partition.tex  shifts.tex  structure.tex  transitions.tex  uncoupling.tex
src/: DiatomicSpectra.jl  atom.py  band.py  bands.py  colors.py  constants.jl  constants.py  continuous.py  convolution.py  convolve.py  data_path.py  energy.py  enums.py  fwf_reader.py  gui.py  hlf_test.py  initialize.py  input.py  lif.py  lif_utils.py  line.py  lookup.py  main.py  molecule.py  output.py  params.py  plot.py  script.py  sim.py  sim_params.py  sim_props.py  simtype.py  simulation.py  spectralline.py  state.py  terms.py  test.py  todo.md  transmission.py  triplet.py  (+3 more)
