[project]
name = "GEDISABRES"
version = "0.2.0"
description = "A tool for simulating the rovibronic spectra of diatomic molecules."
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "hamilterm",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "py3nj",
    "pyqtdarktheme>=2.1.0",
    "pyqtgraph>=0.14.0",
    "pyside6-essentials>=6.10.1",
    "scipy>=1.17.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "C4",
    "C90",
    "D",
    "E",
    "FIX",
    "I",
    "N",
    "NPY",
    "PL",
    "RET",
    "SIM",
    "TC",
    "UP",
    "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
hamilterm = { git = "ssh://git@github.com/nategphillips/Hamilterm", branch = "main" }
py3nj = { git = "ssh://git@github.com/fujiisoup/py3nj", branch = "master" }

[tool.uv]
required-version = ">=0.9.27"
