[project]
name = "GEDISABRES"
version = "0.2.0"
description = "A tool for simulating the rovibronic spectra of diatomic molecules."
readme = "README.md"
requires-python = "==3.14.4"
dependencies = [
    "hamilterm",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "polars==1.40.0",
    "py3nj",
    "pyqtdarktheme==2.1.0",
    "pyqtgraph==0.14.0",
    "pyside6-essentials==6.11.0",
    "scipy==1.17.1",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "C4",
    "C90",
    "D",
    "E",
    "FIX",
    "I",
    "N",
    "NPY",
    "PL",
    "RET",
    "SIM",
    "TC",
    "UP",
    "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
hamilterm = { git = "ssh://git@github.com/nategphillips/Hamilterm", rev = "56c9ef8ff37c05d403dc84a0c6a9090e302fbd65" }
py3nj = { git = "ssh://git@github.com/fujiisoup/py3nj", rev = "098e40e433d6c1f32b1b488519bbae40f40b812b" }

[tool.uv]
required-version = ">=0.11.7"
